# AdventOfCode2023

./: .gitignore
1/: CMakeLists.txt  main.c
2/: CMakeLists.txt  main.c  main2.c
3/: example2.txt  main.c  main2.c
4/: CMakeLists.txt  main.c  main2.c
lib_source/: CMakeLists.txt  StrUtils.c  StrUtils.h  TxtFile.c  TxtFile.h
